Update for yes or no

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clipboard History Welcome Guide</title>
+    <title>Yes or No Wheel Welcome Guide</title>
     <style>
         body {
             font-family: Roboto, sans-serif;
@@ -46,17 +46,16 @@
     </style>
 </head>
 <body>
-    <div class="header">Clipboard History has been installed successfully!</div>
+    <div class="header">Yes or No Wheel has been installed successfully!</div>
     <div class="instructions">
         <div class="step">
             <span class="bold">Click the puzzle piece icon (1)</span> in the top right corner of your browser. Then, <span class="bold">click the small pin icon (2)</span> next to the extension:
             <img src="images/Web_Screen1.png" alt="Steps Image 1">
         </div>
         <div class="step">
-            <span class="bold">Open the extension (3)</span> on any page to view and manage your clipboard history:
+            <span class="bold">Open the extension (3)</span> on any page and Spin the Wheel!
             <img src="images/Web_Screen2.png" alt="Steps Image 2">
         </div>
-        <div class="step">The extension will automatically keep track of all your clipboard operations — you just need to have Chrome open.</div>
     </div>
 </body>
 </html>
